feat: Add optional E2E tests with real Ollama embeddings (#530) (#562)
Co-authored-by: Claude Sonnet 4.5 <noreply@anthropic.com>